--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f6d0fe9ea4.js" crossorigin="anonymous"></script>
     <title>my app</title>
 </head>
 <body>
